Add stack by name
